fix to horizontal overflow issue

--- a/src/base/layout.less
+++ b/src/base/layout.less
@@ -7,8 +7,8 @@ html, body {
   padding: 0;
   margin: 0;
 
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
 }
 
 body {
